# YouBotRobot

./: .gitignore  README.md  TODO.todo  build_package.sh  build_rviz.sh  build_sim.sh  build_ws.sh  clean_build.sh  convert_py_nodes_to_python2.sh  convert_py_nodes_to_python3.sh  frames.gv  git_sync.sh  git_upload.sh  git_upload_manual.sh  mymap.pgm  mymap.yaml  mymap_tuttlebot_map.pgm  mymap_tuttlebot_map.yaml  package_graph.drawio  platform_teleop.sh  rviz.sh  sim.sh  start.sh  start_gazebo.sh  teleop.sh  test.sh
Docs/: .$Diagram.drawio.bkp  Diagram.drawio  slam sensor stack plasement scheme.dwg
Docs/OldVersions/: slam sensor stack plasement scheme.0001.dwg
design/: 000.001 - Ходовая часть.iam  000.001.001 - Уголок.ipt  000.001.002 - Днище.ipt  000.001.003 - Уголок.ipt  000.001.004 - Держатель для проводов.ipt  000.001.004 - Уголок.ipt  000.001.005 - Уголок.ipt  000.001.006 - Накладка зеркальный.ipt  000.001.006 - Накладка.ipt  000.001.006 - Площадка под манипулятор.ipt  000.001.007 - Короб.ipt  000.001.007 - Накладка зеркальное .ipt  000.001.007 - Накладка.ipt  000.001.008 - Короб.ipt  000.001.008 - Накладка.ipt  000.001.011 - Стойка шестигранная М3 20 мм.ipt  000.001.012 - Площадка под коммутатор.ipt  000.001.013 - Скоба прижима турбины.ipt  000.001.014 - Грузовая площадка.ipt  000.001.015 - Стойка площадки высокая.ipt  000.002 - Крепеж мотора СБ.iam  000.002.001 - Крепеж мотора.ipt  000.002.002 - Крышка мотора задняя.ipt  000.002.003 - Металическая вставка.ipt  000.003 - Блок АКБ СБ.iam  000.003 - Крепление под XT60 мама.iam  000.003.001 - Основание.ipt  000.004 - Котроллер СНУ.iam  000.004 - Крепление XT60 папа.iam  000.004.001 - Основание.ipt  000.004.001 - Плата печатная.ipt  000.005 -  Манипулятор.iam  000.005 - Блок АКБ.iam  000.005.001 - Корпус.ipt  000.005.001 - Поворотный стол.iam  000.005.001.001 - Основание.ipt  000.005.001.002 - Поворотное основание.ipt  000.005.001.002 - Шар.ipt  000.005.001.003 - Вал.ipt  000.005.002 - Плечо СБ.iam  (+48 more)
design/BetweenCAD/: jetson_pcb.dxf
design/CabelManagement/: 000.001 - Ходовая часть.Прокладка кабелей1.iam  000.001 - Ходовая часть.Прокладка кабелей1.ipt  000.001.009 - Накладка центральная.ipt  000.001.010 - Realsense крепление.ipt
design/Content Center Files/: 345.txt
design/Docs/: 000.001 - Ходовая часть.dwg  000.002 - Крепеж мотора СБ.dwg  000.002 - Крепеж мотора СБ.idw  000.002 - Крепеж мотора СБ.ipn  000.003.002 - Крышка.ipt
design/For other cads/: inner_of_bat_module.dxf
design/OldVersions/: 000 - OmniBot.0001.iam  000.000 - OmniBot.0004.iam  000.000 - OmniBot.0092.iam  000.001 - Ходовая часть.0353.iam  000.001.001 - Уголок.0012.ipt  000.001.001 - Уголок.0015.ipt  000.001.002 - Днище.0012.ipt  000.001.002 - Днище.0019.ipt  000.001.002 - Днище.0022.ipt  000.001.002 - Днище.0025.ipt  000.001.002 - Крепеж мотора.0002.ipt  000.001.002 - Крепление СБ.0010.iam  000.001.002.001 - Крепление.0069.ipt  000.001.003 - Уголок.0017.ipt  000.001.003 - Уголок.0021.ipt  000.001.004 - Уголок.0007.ipt  000.001.005 - Уголок.0011.ipt  000.001.006 - Накладка зеркальный.0012.ipt  000.001.006 - Накладка зеркальный.0013.ipt  000.001.006 - Накладка.0041.ipt  000.001.006 - Площадка под манипулятор.0003.ipt  000.001.006 - Площадка под манипулятор.0007.ipt  000.001.006 - Площадка под манипулятор.0015.ipt  000.001.006 - Площадка под манипулятор.0019.ipt  000.001.007 - Короб.0018.ipt  000.001.007 - Накладка зеркальное .0003.ipt  000.001.007 - Накладка зеркальное .0004.ipt  000.001.007 - Накладка.0003.ipt  000.001.007 - Накладка.0004.ipt  000.001.007 - Накладка.0007.ipt  000.001.009 - Стойка шестигранная М3 5 мм.0001.ipt  000.001.010 - Стойка шестигранная М3 15 мм.0002.ipt  000.001.011 - Стойка шестигранная М3 20 мм.0003.ipt  000.001.012 - Площадка под коммутатор.0004.ipt  000.001.013 - Скоба прижима турбины.0007.ipt  000.001.013 - Скоба прижима турбины.0008.ipt  000.001.013 - Скобе прижима турбины.0003.ipt  000.001.014 - Грузовая площадка.0003.ipt  000.001.015 - Стойка площадки высокая.0003.ipt  000.002 - Крепеж мотора СБ.0010.iam  (+130 more)
design/SimModels/: 000.001 - Ходовая часть_Упростить_1.mtl  (+3 more)
electronic/: README.md  jetson_power_board.zip1
other/: README.md
src/: README.md
src/omnibot_platform/omnibot_platform_control/: CMakeLists.txt  package.xml
src/omnibot_platform/omnibot_platform_control/config/: LLCC_config.yaml  config.yaml  controller_manager.yaml  translation_config.yaml
src/omnibot_platform/omnibot_platform_control/include/joint_control_to_contoller_translate_lib/: joint_control_to_contoller_translate_lib.hpp
src/omnibot_platform/omnibot_platform_control/launch/: LLCC.launch  joint_control_to_contoller_translate.launch.py  omnibot_platform_contol.launch  omnibot_platform_contollers.launch.py  omnibot_platform_control.launch.py
src/omnibot_platform/omnibot_platform_control/src/: example_velocity.cpp  joint_control_to_contoller_translate_node.cpp  low_level_controller_connector_node.cpp
src/omnibot_platform/omnibot_platform_mecanum_drv/: CMakeLists.txt  package.xml
src/omnibot_platform/omnibot_platform_mecanum_drv/config/: omnibot_platform_mecanum_drv_lib_cfg.yaml
src/omnibot_platform/omnibot_platform_mecanum_drv/include/omnibot_platform_mecanum_drv_lib/: omnibot_platform_mecanum_drv_lib.hpp
src/omnibot_platform/omnibot_platform_mecanum_drv/launch/: omnibot_platform_mecanum_drv.launch.py
src/omnibot_platform/omnibot_platform_mecanum_drv/src/: omnibot_platform_mecanum_drv_node.cpp
src/omnibot_platform/omnibot_platform_teleop/: CMakeLists.txt  package.xml
src/omnibot_platform/omnibot_platform_teleop/config/: teleop_config.yaml
src/omnibot_platform/omnibot_platform_teleop/include/omnibot_platform_teleop_lib/: omnibot_platform_teleop_lib.h  omnibot_platform_teleop_lib.hpp
src/omnibot_platform/omnibot_platform_teleop/launch/: omnibot_platform_teleop.launch  omnibot_platform_teleop.launch.py
src/omnibot_platform/omnibot_platform_teleop/src/: omnibot_platform_teleop_node.cpp
src/omnibot_platform/omnibot_platform_teleop/src/omnibot_platform_teleop_lib/: omnibot_platform_teleop_lib.cpp
(+1490 files in other folders)
